--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "library",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://skuenzi.github.io/library/",
+  "homepage": "https://skuenzi.github.io/library",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.5",
