--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "gh-pages": "^6.1.1",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -51,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^6.16.0"
+    "@typescript-eslint/parser": "^6.16.0",
+    "gh-pages": "^6.1.1"
   }
 }
