--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://skuenzi.github.io/library",
   "dependencies": {
     "-": "^0.0.1",
+    "@tanstack/react-query": "^5.40.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -52,7 +53,11 @@
     ]
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@typescript-eslint/parser": "^6.16.0",
     "gh-pages": "^6.1.1"
+  },
+  "overrides": {
+    "typescript": "$typescript"
   }
 }
